--- a/mybrary/Base.lproj/Main.storyboard
+++ b/mybrary/Base.lproj/Main.storyboard
@@ -395,16 +395,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2y-fu-7Qw">
-                                <rect key="frame" x="2" y="64" width="318" height="504"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="x2y-fu-7Qw" firstAttribute="leading" secondItem="Daf-iO-avm" secondAttribute="leadingMargin" constant="-14" id="GNP-TS-MAm"/>
-                            <constraint firstItem="x2y-fu-7Qw" firstAttribute="top" secondItem="kgR-4j-5OO" secondAttribute="bottom" id="QeK-uG-3LY"/>
-                            <constraint firstItem="tIT-ZV-LyF" firstAttribute="top" secondItem="x2y-fu-7Qw" secondAttribute="bottom" id="Usl-XM-Tq2"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="x2y-fu-7Qw" secondAttribute="trailing" constant="-16" id="bR9-OY-Tyq"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="x2y-fu-7Qw" secondAttribute="bottom" id="3Vb-4L-4BL"/>
+                            <constraint firstItem="x2y-fu-7Qw" firstAttribute="leading" secondItem="Daf-iO-avm" secondAttribute="leading" id="5BS-jg-xaQ"/>
+                            <constraint firstAttribute="trailing" secondItem="x2y-fu-7Qw" secondAttribute="trailing" id="AQx-bN-Slc"/>
+                            <constraint firstItem="x2y-fu-7Qw" firstAttribute="top" secondItem="Daf-iO-avm" secondAttribute="topMargin" constant="64" id="EMP-KQ-jjH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xKR-Lw-Eqf"/>
@@ -449,20 +449,35 @@
                                     <action selector="submtBookInstance:" destination="C01-mu-fAq" eventType="touchUpInside" id="bnL-3f-ZVE"/>
                                 </connections>
                             </button>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XdT-fW-oNy">
-                                <rect key="frame" x="4" y="255" width="51" height="24"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XdT-fW-oNy">
+                                <rect key="frame" x="4" y="377" width="51" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offer Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGI-mI-IXY">
-                                <rect key="frame" x="4" y="190" width="114" height="28"/>
+                                <rect key="frame" x="4" y="347" width="114" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yDn-EO-o8R">
+                                <rect key="frame" x="221" y="374" width="83" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="83" id="wdA-Ah-lvg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oRy-Pt-M2Z">
+                                <rect key="frame" x="85" y="140" width="150" height="178"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="178" id="h98-23-WcC"/>
+                                    <constraint firstAttribute="width" constant="150" id="uTN-Mu-Bxq"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zFR-pD-F61">
-                                <rect key="frame" x="126" y="184" width="90" height="40"/>
+                                <rect key="frame" x="130" y="341" width="90" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="uoB-B1-clv"/>
                                 </constraints>
@@ -474,35 +489,30 @@
                                     <action selector="offerTypePressed:" destination="C01-mu-fAq" eventType="touchUpInside" id="YBI-3T-unC"/>
                                 </connections>
                             </button>
-                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yDn-EO-o8R">
-                                <rect key="frame" x="221" y="252" width="83" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="83" id="wdA-Ah-lvg"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zFR-pD-F61" firstAttribute="centerY" secondItem="SGI-mI-IXY" secondAttribute="centerY" id="9ko-Vq-pzu"/>
                             <constraint firstItem="jm1-oT-ldM" firstAttribute="centerX" secondItem="3vP-Cy-KgU" secondAttribute="centerX" id="D1v-U1-06D"/>
-                            <constraint firstItem="zFR-pD-F61" firstAttribute="leading" secondItem="SGI-mI-IXY" secondAttribute="trailing" constant="8" id="KEG-UP-x5r"/>
+                            <constraint firstItem="zFR-pD-F61" firstAttribute="leading" secondItem="SGI-mI-IXY" secondAttribute="trailing" constant="12" id="KEG-UP-x5r"/>
+                            <constraint firstItem="SGI-mI-IXY" firstAttribute="top" secondItem="oRy-Pt-M2Z" secondAttribute="bottom" constant="29" id="KPW-xg-fux"/>
                             <constraint firstItem="SGI-mI-IXY" firstAttribute="leading" secondItem="3vP-Cy-KgU" secondAttribute="leadingMargin" constant="-12" id="LrN-Bb-vWK"/>
                             <constraint firstItem="XdT-fW-oNy" firstAttribute="leading" secondItem="3vP-Cy-KgU" secondAttribute="leadingMargin" constant="-12" id="WQ2-kr-fco"/>
                             <constraint firstItem="yDn-EO-o8R" firstAttribute="centerY" secondItem="XdT-fW-oNy" secondAttribute="centerY" id="ZkM-rL-DfA"/>
                             <constraint firstItem="mfO-cl-LJA" firstAttribute="top" secondItem="utV-ZL-Ytc" secondAttribute="bottom" constant="8" id="aNo-Hk-XwR"/>
-                            <constraint firstItem="XdT-fW-oNy" firstAttribute="top" secondItem="SGI-mI-IXY" secondAttribute="bottom" constant="21" id="bsV-bH-ugY"/>
+                            <constraint firstItem="XdT-fW-oNy" firstAttribute="top" secondItem="SGI-mI-IXY" secondAttribute="bottom" constant="2" id="bsV-bH-ugY"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yDn-EO-o8R" secondAttribute="trailing" id="cjP-hB-fNs"/>
                             <constraint firstItem="mfO-cl-LJA" firstAttribute="trailing" secondItem="3vP-Cy-KgU" secondAttribute="trailingMargin" constant="4" id="fjs-JW-w3R"/>
-                            <constraint firstItem="SGI-mI-IXY" firstAttribute="top" secondItem="mfO-cl-LJA" secondAttribute="bottom" constant="88" id="g61-ki-eIi"/>
+                            <constraint firstItem="oRy-Pt-M2Z" firstAttribute="centerX" secondItem="mfO-cl-LJA" secondAttribute="centerX" id="mtY-TZ-rav"/>
                             <constraint firstItem="oEU-A2-det" firstAttribute="top" secondItem="jm1-oT-ldM" secondAttribute="bottom" constant="8" id="rgb-Bi-qX9"/>
+                            <constraint firstItem="oRy-Pt-M2Z" firstAttribute="top" secondItem="mfO-cl-LJA" secondAttribute="bottom" constant="38" id="yKI-oM-OIb"/>
                             <constraint firstItem="mfO-cl-LJA" firstAttribute="leading" secondItem="3vP-Cy-KgU" secondAttribute="leadingMargin" constant="-4" id="yKn-g5-sn1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AaL-Js-Oa0"/>
                     <connections>
                         <outlet property="bookNameLabel" destination="mfO-cl-LJA" id="b1U-xA-LYh"/>
+                        <outlet property="coverImage" destination="oRy-Pt-M2Z" id="vET-D5-5Cu"/>
                         <outlet property="giveOptions" destination="vdo-aS-pLr" id="Wvv-fK-qNr"/>
                         <outlet property="offerTypeButton" destination="zFR-pD-F61" id="YUB-Wb-uQj"/>
                         <outlet property="priceAmountText" destination="yDn-EO-o8R" id="5es-zm-684"/>
