-version and stuff

--- a/mybrary/Base.lproj/Main.storyboard
+++ b/mybrary/Base.lproj/Main.storyboard
@@ -558,8 +558,38 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2y-fu-7Qw">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <subviews>
+                                    <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0mG-Nn-aD2">
+                                        <rect key="frame" x="0.0" y="375" width="320" height="129"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bU2-tM-vY3">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="129"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgB-lY-VgB">
+                                                    <rect key="frame" x="8" y="8" width="288" height="107"/>
+                                                    <animations/>
+                                                    <string key="text">Find ISBN barcode of your book
+(usually on back cover)
+and Scan it above</string>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <color key="textColor" red="0.56470588239999997" green="0.24313725489999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </view>
+                                        <animations/>
+                                        <blurEffect style="extraLight"/>
+                                    </visualEffectView>
+                                </subviews>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="0mG-Nn-aD2" firstAttribute="top" secondItem="x2y-fu-7Qw" secondAttribute="top" constant="375" id="6LD-d4-uJw"/>
+                                    <constraint firstItem="0mG-Nn-aD2" firstAttribute="leading" secondItem="x2y-fu-7Qw" secondAttribute="leading" id="7ph-Oj-Z46"/>
+                                    <constraint firstAttribute="trailing" secondItem="0mG-Nn-aD2" secondAttribute="trailing" id="XJa-5W-JcF"/>
+                                    <constraint firstAttribute="bottom" secondItem="0mG-Nn-aD2" secondAttribute="bottom" id="o0M-si-5aq"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <animations/>
@@ -913,6 +943,6 @@ and we make sure we remember it for you :) </string>
         <image name="search" width="87" height="80"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lDr-Uj-mUk"/>
+        <segue reference="NUW-kR-QHN"/>
     </inferredMetricsTieBreakers>
 </document>
